chore: make BookMapper not static